// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when checked 1`] = `
<label
  class="radio-label"
  data-testid="radio-button"
>
  <div
    aria-checked="true"
    class="radio-button selected"
    role="radio"
    tabindex="0"
  >
    <div
      class="inner-circle"
    />
  </div>
  Foo
</label>
`;

exports[`renders correctly when unchecked 1`] = `
<label
  class="radio-label"
  data-testid="radio-button"
>
  <div
    aria-checked="false"
    class="radio-button"
    role="radio"
    tabindex="0"
  >
    <div
      class="inner-circle"
    />
  </div>
  Foo
</label>
`;
